<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/black"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.ortiz.touchview.TouchImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/content_barrier"
            android:scaleType="fitCenter"
            tools:src="@drawable/ic_launcher_foreground" />

        <com.example.gallery_da.MarkupContainer
            android:id="@+id/text_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/image_view"
            app:layout_constraintBottom_toBottomOf="@id/image_view"
            app:layout_constraintStart_toStartOf="@id/image_view"
            app:layout_constraintEnd_toEndOf="@id/image_view" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/content_barrier"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="filter_chipgroup,tunable_sliders" />

        <com.google.android.material.chip.Chip
            android:id="@+id/addtext_button"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_addtext"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editor_toolbar"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_chipgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editor_toolbar"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <include
            android:id="@+id/tunable_sliders"
            layout="@layout/layout_tunablesliders"
            android:visibility="gone"
            tools:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editor_toolbar"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <HorizontalScrollView
            android:id="@+id/editor_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:paddingHorizontal="16dp"
            android:scrollbars="none"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar_flow"
            app:layout_constraintTop_toBottomOf="@id/image_view">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/editor_actionbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:singleLine="true"
                app:checkedChip="@id/filters_chip">

                <com.google.android.material.chip.Chip
                    android:id="@+id/filters_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipStartPadding="8dp"
                    app:chipEndPadding="8dp"
                    android:text="@string/chioce_editor_filters" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/markup_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipStartPadding="8dp"
                    app:chipEndPadding="8dp"
                    android:text="@string/chioce_editor_markup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/manualedit_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    app:chipStartPadding="8dp"
                    app:chipEndPadding="8dp"
                    android:text="@string/chioce_editor_tune" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:text="@string/action_cancel"
            android:textColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:text="@string/action_save"
            android:textColor="@android:color/white" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/bottom_bar_flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            app:flow_horizontalAlign="center"
            app:flow_horizontalStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:constraint_referenced_ids="cancel_button,save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>