<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:background="@android:color/black">

    <TextView
        android:id="@+id/brightness_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:text="@string/tune_label_brightness"
        android:padding="4dp"
        android:textColor="@android:color/white" />

    <com.google.android.material.slider.Slider
        android:id="@+id/brightness_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="0"
        android:valueFrom="-100"
        android:valueTo="100"
        app:tickVisible="false" />

    <TextView
        android:id="@+id/brightness_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minWidth="32dp"
        android:padding="4dp"
        android:textColor="@android:color/white"
        tools:text="100" />

    <TextView
        android:id="@+id/contrast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:text="@string/tune_label_contrast"
        android:padding="4dp"
        android:textColor="@android:color/white" />

    <com.google.android.material.slider.Slider
        android:id="@+id/contrast_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="0"
        android:valueFrom="-100"
        android:valueTo="100"
        app:tickVisible="false" />

    <TextView
        android:id="@+id/contrast_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minWidth="32dp"
        android:padding="4dp"
        android:textColor="@android:color/white"
        tools:text="0" />

    <TextView
        android:id="@+id/saturation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:text="@string/tune_label_saturation"
        android:padding="4dp"
        android:textColor="@android:color/white" />

    <com.google.android.material.slider.Slider
        android:id="@+id/saturation_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:value="0"
        android:valueFrom="-100"
        android:valueTo="100"
        app:tickVisible="false" />

    <TextView
        android:id="@+id/saturation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minWidth="32dp"
        android:padding="4dp"
        android:textColor="@android:color/white"
        tools:text="0" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/sliders_flow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="8dp"
        app:flow_wrapMode="chain"
        android:orientation="horizontal"
        app:flow_maxElementsWrap="3"
        app:constraint_referenced_ids="brightness_label,brightness_slider,brightness_value,contrast_label,contrast_slider,contrast_value,saturation_label,saturation_slider,saturation_value" />

</androidx.constraintlayout.widget.ConstraintLayout>